[package]
name = "jukbx"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.1", default-features = false }
log = "0.4.20"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
tiny_http = "0.12.0"
ascii = "1.1.0"
base64 = "0.21.5"
sha2 = "0.10.8"
lofty = "0.21.1"
anyhow = "*"
musicbrainz_rs_nova = { path = "../musicbrainz_rs_nova", default-features = false, features = ["blocking"] }
csv = "*"
petname = { version = "*", default-features = false, features = ["default-words"] }
rand = "*"
url-escape = "0.1.1"
